experiencia.html atualizado

--- a/Menu HTML/experiencia.html
+++ b/Menu HTML/experiencia.html
@@ -10,8 +10,17 @@
     <body>
         <h1> Experiência </h1>
         <p>
-
+            <strong> Supostamente </strong> eu sou um bom programador que tem preferência nas seguintes linguagens de programação:
         </p>
+
+        <ol>
+            <li> Python</li>
+            <li> C </li>
+            <li> Java </li>
+            <li> JavaScript </li>
+            <li> C# </li>
+        </ol>
+
     </body>
 
 </div>
