--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h3> Menu </h3>
 
         <ul>
-        <li><a href="Menu HTML/aspiracoes.html">Relatório de Estágio</a></li>
-        <li><a href="Menu HTML/experiencia.html">Experiência</a></li>
-        <li><a href="Menu HTML/aspiracoes.html">Aspirações</a></li>
+        <li><a href="estagio.html">Relatório de Estágio</a></li>
+        <li><a href="experiencia.html">Experiência</a></li>
+        <li><a href="aspiracoes.html">Aspirações</a></li>
         </ul>
     </body>
 
