--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 
 <html lang="pt-br">
 
-<div>
-    <head>
-        <title> Eduardo Portugal</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eduardo Portugal</title>
+    <link rel="stylesheet" href="css/estilo.css">
+</head>
 
-    <body>
-        <h1> Eduardo Portugal Souza Rocha</h1>
-        <h3> Menu </h3>
+<body>
+    <h1> Eduardo Portugal Souza Rocha</h1>
+    <h3> Menu: </h3>
 
-        <ul>
-        <li><a href="estagio.html">Relatório de Estágio</a></li>
-        <li><a href="experiencia.html">Experiência</a></li>
-        <li><a href="aspiracoes.html">Aspirações</a></li>
-        </ul>
-    </body>
-
-</div>
+    <ul>
+    <li><a href="estagio.html">Relatório de Estágio</a></li>
+    <li><a href="experiencia.html">Experiência</a></li>
+    <li><a href="aspiracoes.html">Aspirações</a></li>
+    </ul>
+</body>
 
 </html>
 
